# feathers_and_fairways

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  POSSIBLE_FEATURES.md  README.md  api.md  docker-compose.yml  dockerfile  insert_seed_data.sh  migrate_db.sh  pull_scores.sh  quickstart.md  recalculate_fantasy_points.sql  score-cron.txt  seed_data.sql
.cargo/: config.toml
example_jsons/: add_hole_scores.json  admin_login.json  create_access_keys.json  create_golfer.json  create_season.json  create_team.json  create_tournament.json  upload_golfers.json  upload_scores.json  upload_tournament_golfer_groups.json
migrations/: 01_create_seasons.sql  02_create_golfers.sql  03_create_access_keys.sql  04_create_teams.sql  04_create_tournaments.sql  05_create_team_golfers.sql  05_create_teams.sql  06_create_team_golfers.sql  06_create_tournaments.sql  07_create_hole_scores.sql  08_create_tournament_golfer_groups.sql  09_add_team_email.sql  10_expand_groups_and_amateurs.sql  11_add_espn_ids.sql  12_remove_seasons.sql
src/: auth.rs  db.rs  main.rs  models.rs  routes.rs
